--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ networks:
  monitoring:
   driver: bridge
 
+volumes:
+ prometheus_data: {}
+ grafana_data: {}
+
 services:
  frontend-prediction:
   build: ./frontend_rating
@@ -25,6 +29,60 @@ services:
    - 5000:5000
   expose:
     - 5000
+  restart: unless-stopped
+  networks:
+   - monitoring
+
+ node-exporter:
+  image: prom/node-exporter:latest
+  container_name: node-exporter-pc
+  restart: unless-stopped
+  volumes:
+   - /proc:/host/proc:ro
+   - /sys:/host/sys:ro
+   - /:/rootfs:ro
+  command:
+   - '--path.procfs=/host/proc'
+   - '--path.rootfs=/rootfs'
+   - '--path.sysfs=/host/sys'
+   - '--collector.filesystem.mount-points-exclude=\
+    ^/(sys|proc|dev|host|etc)($$|/)'
+  expose:
+   - 9100
+  ports:
+   - 9100:9100
+  networks:
+   - monitoring
+
+ prometheus:
+  image: prom/prometheus
+  container_name: prometheus-route
+  restart: unless-stopped
+  volumes:
+   - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+   - ./monitoring/prometheus_data:/prometheus
+   - ./monitoring:/etc/prometheus
+  command:
+   - '--config.file=/etc/prometheus/prometheus.yml'
+   - '--storage.tsdb.path=/prometheus'
+   - '--web.console.libraries=/etc/prometheus/console_libraries'
+   - '--web.console.templates=/etc/prometheus/consoles'
+   - '--web.enable-lifecycle'
+  ports:
+   - 9090:9090
+  expose:
+   - 9090
+  networks:
+   - monitoring
+
+ grafana:
+  image: grafana/grafana:latest
+  container_name: grafana-dashboard
+  volumes:
+   - ./monitoring/grafana_data:/var/lib/grafana
+   - ./monitoring/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+  ports:
+   - 3000:3000
   restart: unless-stopped
   networks:
    - monitoring
